--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>E-Commerce</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <input type="text" />
-    <script src="./js/main.js"></script>
+  <h1>Carrito de Compras</h1>
+
+  <form id="form-producto">
+    <label for="producto">Producto:</label>
+    <select id="producto">
+      <option value="gaseosas">Gaseosas</option>
+      <option value="snacks">Snacks</option>
+      <option value="galletas">Galletas</option>
+      <option value="alcohol">Alcohol</option>
+      <option value="caramelos">Caramelos</option>
+      <option value="yerba">Yerba</option>
+      <option value="azucar">Azúcar</option>
+    </select>
+
+    <label for="cantidad">Cantidad:</label>
+    <input type="number" id="cantidad" min="1" required />
+
+    <button type="submit">Agregar al carrito</button>
+  </form>
+
+  <h2>Carrito</h2>
+  <div id="carrito-container"></div>
+  <div id="total"></div>
+
+  <button id="vaciar">Vaciar carrito</button>
+
+  <script src="script.js"></script>
 </body>
 </html>
