--- a/index.html
+++ b/index.html
@@ -7,31 +7,39 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Carrito de Compras</h1>
 
-  <form id="form-producto">
-    <label for="producto">Producto:</label>
-    <select id="producto">
-      <option value="gaseosas">Gaseosas</option>
-      <option value="snacks">Snacks</option>
-      <option value="galletas">Galletas</option>
-      <option value="alcohol">Alcohol</option>
-      <option value="caramelos">Caramelos</option>
-      <option value="yerba">Yerba</option>
-      <option value="azucar">Azúcar</option>
-    </select>
+  <header>
+    <h1>Carrito de Compras</h1>
+  </header>
 
-    <label for="cantidad">Cantidad:</label>
-    <input type="number" id="cantidad" min="1" required />
+  <main>
+    <section>
+      <form id="form-producto">
+        <label for="producto">Producto:</label>
+        <select id="producto" name="producto">
+          <option value="gaseosas">Gaseosas</option>
+          <option value="snacks">Snacks</option>
+          <option value="galletas">Galletas</option>
+          <option value="alcohol">Alcohol</option>
+          <option value="caramelos">Caramelos</option>
+          <option value="yerba">Yerba</option>
+          <option value="azucar">Azúcar</option>
+        </select>
 
-    <button type="submit">Agregar al carrito</button>
-  </form>
+        <label for="cantidad">Cantidad:</label>
+        <input type="number" id="cantidad" name="cantidad" min="1" required />
 
-  <h2>Carrito</h2>
-  <div id="carrito-container"></div>
-  <div id="total"></div>
+        <button type="submit">Agregar al carrito</button>
+      </form>
+    </section>
 
-  <button id="vaciar">Vaciar carrito</button>
+    <section>
+      <h2>Carrito</h2>
+      <div id="carrito-container"></div>
+      <div id="total"></div>
+      <button id="vaciar">Vaciar carrito</button>
+    </section>
+  </main>
 
   <script src="script.js"></script>
 </body>
