--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
     <p>&copy; 2025 E-Commerce. Todos los derechos reservados.</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
