--- a/index.html
+++ b/index.html
@@ -45,16 +45,13 @@
     <section class="carrito-section">
       <h2>Carrito</h2>
       <div id="carrito-container">
-        <!-- Aquí se agregan los productos -->
+      <!-- Aqui se agregara el contenido del carrito (a completar mas adelante de forma correcta)-->
       </div>
       <div id="total">Total: $0</div>
       <button id="vaciar">Vaciar carrito</button>
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 E-Commerce. Todos los derechos reservados.</p>
-  </footer>
 
   <script src="./js/main.js"></script>
 </body>
